--- a/src/css/style.css
+++ b/src/css/style.css
@@ -252,6 +252,10 @@ button {
   color: var(--dark-grey);
 }
 
+.product-list .quickLook:hover {
+  text-decoration: underline;
+}
+
 /* Styles for product lists */
 .product-card {
   flex: 1 1 45%;
