--- a/src/css/style.css
+++ b/src/css/style.css
@@ -85,7 +85,7 @@ header {
   margin-top: -1.3em;
 }
 
-.logo--square > div {
+.logo--square>div {
   margin-top: -1.7em;
 }
 
@@ -138,19 +138,37 @@ button {
   fill: var(--tertiary-color);
 }
 
+#cart-count {
+  position: absolute;
+  top: 10px;
+  /* Adjust as necessary */
+  right: 10px;
+  /* Adjust as necessary */
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+}
+
 /* End cart icon styles */
 
-.button-link{
+.button-link {
   text-decoration: none;
 }
 
-.checkout-button{
+.checkout-button {
   margin-bottom: 20px;
 }
 
 #checkout-header {
   margin-bottom: 20px;
 }
+
 #checkout-body .products {
   max-width: 600px;
   margin: 0 auto;
@@ -158,17 +176,22 @@ button {
   padding: 20px;
   border-radius: 5px;
 }
-#checkout-body h2, #checkout-body h3 {
+
+#checkout-body h2,
+#checkout-body h3 {
   margin-bottom: 10px;
 }
+
 #checkout-body form {
   display: flex;
   flex-direction: column;
 }
+
 #checkout-body label {
   margin-top: 10px;
   margin-bottom: 5px;
 }
+
 #checkout-body input[type="text"] {
   width: 100%;
   padding: 10px;
@@ -176,19 +199,23 @@ button {
   border-radius: 5px;
   box-sizing: border-box;
 }
+
 .checkout-summary {
   margin-top: 20px;
   border-top: 1px solid #ddd;
   padding-top: 20px;
 }
+
 #checkout-body .summary-detail {
   display: flex;
   justify-content: space-between;
   margin-top: 10px;
 }
+
 #checkout-body .summary-label {
   font-weight: bold;
 }
+
 #checkout-body button {
   margin-top: 20px;
   padding: 15px;
@@ -199,29 +226,34 @@ button {
   font-size: 16px;
   cursor: pointer;
 }
+
 #checkout-body button:hover {
   background-color: #45a049;
 }
+
 #checkout-body fieldset {
   border: 1px solid #ddd;
   padding: 20px;
   border-radius: 5px;
   margin-top: 20px;
 }
+
 #checkout-body fieldset legend {
   padding: 0 10px;
   font-weight: bold;
 }
 
-.checkout-summary > ul {
+.checkout-summary>ul {
   padding-left: 0;
   list-style-type: none;
 }
+
 .checkout-summary li {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .checkout-summary input {
   width: 25%;
   font-size: 1em;
