--- a/src/css/style.css
+++ b/src/css/style.css
@@ -96,6 +96,59 @@ button {
 }
 /* End utility classes */
 
+/* Nav breadcrumb */
+.breadcrumb {
+  padding: 10px;
+  font-size: 14px;
+  background-color: #f8f8f8;
+}
+.breadcrumb a {
+  text-decoration: none;
+  color: #007bff;
+}
+.breadcrumb a:hover {
+  text-decoration: underline;
+}
+
+/* End nav breadcrumb */
+
+/* Modal Styles */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  padding-top: 60px;
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 /* Cart icon styles */
 .cart {
   padding-top: 1em;
