--- a/src/css/style.css
+++ b/src/css/style.css
@@ -404,20 +404,21 @@ button {
   font-weight: bold;
 }
 
-.alert{
+.alert {
   background-color: var(--primary-color);
   color: black;
   padding: 10px;
   margin-bottom: 15px;
 }
-.alert span, .alert p{
-  display:inline-block;
+.alert span,
+.alert p {
+  display: inline-block;
 }
-.alert span{
-  float:right;
+.alert span {
+  float: right;
 }
-.alert span:hover{
-  cursor:pointer;
+.alert span:hover {
+  cursor: pointer;
 }
 
 @media screen and (min-width: 500px) {
