--- a/src/css/style.css
+++ b/src/css/style.css
@@ -387,20 +387,65 @@ button {
   font-weight: bold;
 }
 
-.alert{
+.alert {
   background-color: var(--primary-color);
   color: black;
   padding: 10px;
   margin-bottom: 15px;
 }
-.alert span, .alert p{
-  display:inline-block;
+.alert span,
+.alert p {
+  display: inline-block;
 }
-.alert span{
-  float:right;
+.alert span {
+  float: right;
 }
-.alert span:hover{
-  cursor:pointer;
+.alert span:hover {
+  cursor: pointer;
+}
+
+.wishlist-card {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-bottom: 1px solid var(--primary-color);
+}
+
+.wishlist-card__image {
+  margin-right: 10px;
+}
+
+.wishlist-card__image img {
+  width: 80px;
+  height: 80px;
+}
+
+.wishlist-card__color {
+  margin-right: 10px;
+}
+
+.wishlist-card a {
+  color: inherit;
+  text-decoration: none;
+  margin-right: 10px;
+}
+
+.wishlist-card__price {
+  margin-right: 10px;
+}
+
+.wishlist-card__move a {
+  text-decoration: none;
+  color: var(--secondary-color);
+}
+
+.wishlist-card__move a:hover {
+  text-decoration: underline;
+}
+
+.add-to-wishlist {
+  font-size: 0.8em;
+  float: right;
 }
 
 @media screen and (min-width: 500px) {
