--- a/src/css/style.css
+++ b/src/css/style.css
@@ -554,6 +554,46 @@ button {
 .alert span:hover {
   cursor: pointer;
 }
+#login-form {
+  margin-top: 20px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#login-form div {
+  margin-bottom: 10px;
+}
+
+#login-form label {
+  display: block;
+  font-weight: bold;
+  text-align: center;
+}
+
+#login-form input[type="email"],
+#login-form input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  max-width: 15rem;
+  
+  
+}
+
+#login-form button {
+  padding: 0.5em 2em;
+  background-color: var(--secondary-color);
+  color: white;
+  margin: auto;
+  display: block;
+  border: 0;
+  font-size: var(--large-font);
+  cursor: pointer;
+  margin-bottom: 1em;
+}
 
 @media screen and (min-width: 500px) {
   body {
