--- a/src/css/style.css
+++ b/src/css/style.css
@@ -246,7 +246,7 @@ button {
 }
 
 .registration-form input[type="submit"] {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   cursor: pointer;
   transition: background-color 0.3s ease;
